# analytics-stock

./: .env.example  .gitignore  .size-budget.json  AGENTS.md  CLAUDE.md  README.md  config.yaml  docker-compose.yml
worker/: .dockerignore  Dockerfile  pyproject.toml
worker/src/: __init__.py  config.py  main.py  types.py  types_edge_ideas.py  types_market.py  types_research.py  types_strategy.py  types_trading.py
worker/src/analytics/: backtest.py  dcf.py  edge.py  features.py  ranking.py  scoring.py  signal.py  validation.py
worker/src/data/: README.md  (+5 more)
worker/tests/: test_agents_job.py  test_backtest.py  test_binance_client.py  test_crypto_arb_strategies.py  test_crypto_gateway_client.py  test_crypto_marketdata_job.py  test_db_repository.py  test_deep_research.py  test_discord_command_parser.py  test_discord_listener_job.py  test_discord_notifier.py  test_discord_research_listener_job.py  test_edge_radar_job.py  test_executor_job.py  test_gateway_crypto_app.py  test_gateway_jp_app.py  test_gateway_us_app.py  test_hyperliquid_client.py  test_ingest_youtube_job.py  test_jp_gateway_client.py  test_jquants_client.py  test_llm_reporting_golden.py  test_llm_reporting_live.py  test_llm_reporting_unit.py  test_llm_weekly_summary_golden.py  test_llm_weekly_summary_unit.py  test_openai_client.py  test_provider_events.py  test_provider_master.py  test_ranking.py  test_reconcile.py  test_reporting.py  test_research_chat_job.py  test_research_job.py  test_research_prompts.py  test_research_ratings.py  test_risk_gate.py  test_scoring.py  test_sec_client.py  test_signal.py  (+6 more)
(+226 files in other folders)
