[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-stock-worker"
version = "0.1.0"
description = "Worker for stock analysis baseline v1.1"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.1",
  "psycopg[binary]>=3.1",
  "SQLAlchemy>=2.0",
  "PyYAML>=6.0",
  "pydantic>=2.7",
  "requests>=2.32",
  "boto3>=1.34",
  "python-dateutil>=2.9",
  "tenacity>=9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
